--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                               
                               <!-- Modal body -->
                               <div class="modal-body">
-                                You are the person I have been dreaming all my life <i class=' text-danger fa fa-heart'></i>, so allow me to express my intense love for you.<i class=' text-danger fa fa-heart'></i> You are the most precious thing in my life.
+                                You are the one with whom I see my future <i class=' text-danger fa fa-heart'></i>, So allow me to express my intense love for you.<i class=' text-danger fa fa-heart'></i> You are the most precious thing in my life.
 
 
 
